# Logos

./: .gitignore  LICENSE  Logos.g4  NOTES.md  README.md  assemble_link.sh  main.py  make.sh  playground.py  pyproject.toml  requirements.txt
IL/: ILGenerator.py  RegisterAllocator.py  __init__.py
X86/: X86Listener.py  consts.py  x86Listener.py  x86Visitor.py
codegen/: __init__.py
codegen/arm/: __init__.py
consts/: __init__.py
examples/: fib.l  is_prime.l  rand.l
libc/macos/arm64/: Makefile  libc.s
notes/: NOTES.md
notes/assembly/: hello_world.as
programs/: 1.l  2.l  3.l  ref.l
programs/if_else/: 1.l
programs/mem/: 1.l
programs/spill/: 1.l  2.l  3.l
programs/while/: 1.l
src/: run.py
src/logos/: Logos.g4  LogosLexerRules.g4  __main__.py  assemble_link.sh  main.py  make.sh  program.as
src/logos/IL/: ILGenerator.py  RegisterAllocator.py  __init__.py
src/logos/codegen/: __init__.py
src/logos/codegen/arm/: __init__.py
src/logos/notes/: NOTES.md
src/logos/notes/assembly/: hello_world
src/logos/programs/: 1.l  2.l  3.l  fib.l  rand.l  reg_alloc.l
src/logos/tests/RegisterAllocator/: test_kill.py  test_liveness_analysis.py  test_successors.py
src/logos/tests/utils/: test_math.py
src/logos/utils/: graph.py  math.py
tests/RegisterAllocator/: test_generates_liveness.py  test_graph_coloring.py  test_kill.py  test_liveness_analysis.py  test_register_allocation.py  test_spilling.py  test_successors.py
tests/utils/: test_graph.py
tmp/: output  run.sh  simple.s  visualize_graph.py
utils/: graph.py
