[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logos"
version = "0.0.1"
authors = [
  { name="Jan Meznik", email="jan@meznik.dk" },
]
description = "The Logos programming language"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "antlr4-python3-runtime",
  "antlr4-tools"
]

[project.urls]
Homepage = "https://github.com/JanmanX/Logos"
Issues = "https://github.com/JanmanX/Logos/issues"
[tool]

[project.scripts]
logos = "logos.cli:cli"